[package]
name = "virtual-lorawan-device"
version = "0.2.10"
authors = ["lthiery <thiery.louis@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
env_logger = "0"
heapless = "0"
hex = "0"
log = "0"
lorawan-encoding = { git = "https://github.com/ivajloip/rust-lorawan.git", rev = "674eca001185caaa8eb9d1f2e6d203760d94c7b9" }
lorawan-device = { git = "https://github.com/ivajloip/rust-lorawan.git", rev = "674eca001185caaa8eb9d1f2e6d203760d94c7b9" }
semtech-udp = { version = ">=0.7,<1", features=["client"] }
serde = "1"
structopt = "0"
thiserror = "1"
config = {version="0", default-features=false, features=["toml"]}
rand = "0"
prometheus = "0"
hyper = { version = "0", features = ["full"] }

[dependencies.tokio]
version = "1"
features = ["macros", "sync", "time", "rt-multi-thread", "signal"]
