[package]
name = "virtual-lorawan-device"
version = "0.2.13-alpha.0"
authors = ["lthiery <thiery.louis@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
env_logger = "0"
heapless = "0"
hex = "0"
log = "0"
lorawan-encoding = { git = "https://github.com/helium/rust-lorawan.git" }
lorawan-device = { git = "https://github.com/helium/rust-lorawan.git" }
semtech-udp = { version = ">=0.7,<0.8", features=["client"] }
serde = "1"
structopt = "0"
thiserror = "1"
config = { version="0.11", default-features=false, features=["toml"]}
rand = "0"
prometheus = "0"
hyper = { version = "0", features = ["full"] }

[dependencies.tokio]
version = "1"
features = ["macros", "sync", "time", "rt-multi-thread", "signal"]
